--- a/index.css
+++ b/index.css
@@ -42,6 +42,7 @@ ul.stdout > li > span.text {
   word-wrap: break-word;
   white-space: pre-wrap;
   width: 95%;
+  max-width: 95%;
 }
 
 ul.stdout > li.input > span.prompt, ul.stdout > li.echo > span.prompt {
